# numerical-analysis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
cmake/: clang-toolchain.cmake
source/: main.cpp
toolchains/: linux-clang.cmake
